fixing-project-structure

--- a/SkiNet.Infrastructure/E-Commerce-Skinet.Infrastructure.csproj
+++ b/SkiNet.Infrastructure/E-Commerce-Skinet.Infrastructure.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AccessOperationTeam.Core\E-Commerce-Skinet.Core.csproj" />
+    <ProjectReference Include="..\SkiNet.Core\E-Commerce-Skinet.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
