add-basket-functionality-and-redis

--- a/SkiNet/appsettings.json
+++ b/SkiNet/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SkinetDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SkinetDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "Redis": "localhost"
   },
   "AllowedOrigins": [ "http://localhost:4200" ],
   "Jwt": {
