add-identity-and-fix-project-structure

--- a/SkiNet/appsettings.json
+++ b/SkiNet/appsettings.json
@@ -8,14 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SkinetDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "IdentityConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SkinetIdentityDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
     "Redis": "localhost"
   },
   "AllowedOrigins": [ "http://localhost:4200" ],
-  "Jwt": {
+  "Token": {
     "Issuer": "http://localhost:5076",
     "Audience": "http://localhost:4200",
     "EXPIRATION_MINUTES": 1,
-    "key": "this is secret key for jwt is my secret"
+    "Key": "this is secret key for jwt is my secret"
   },
   "RefreshToken": {
     "EXPIRATION_MINUTES": 60
