--- a/SkiNet/appsettings.json
+++ b/SkiNet/appsettings.json
@@ -18,6 +18,10 @@
     "EXPIRATION_MINUTES": 1,
     "Key": "this is secret key for jwt is my secret"
   },
+  "StripeSettings": {
+    "PublishableKey": "your_publishable_key",
+    "SecretKey": "your_secret_here"
+  },
   "RefreshToken": {
     "EXPIRATION_MINUTES": 60
   },
